--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "node": ">=18"
   },
   "dependencies": {
-    "next": "14.0.4",
+    "next": "^14.2.32",
     "react": "^18",
     "react-dom": "^18"
   },
